--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       body {
         font-family: 'Nunito', sans-serif;
       }
-      /* Custom shake animation for the angry modal */
+      /* Custom Animations */
       @keyframes shake {
         0%, 100% { transform: translateX(0); }
         10%, 30%, 50%, 70%, 90% { transform: translateX(-10px); }
@@ -18,6 +18,66 @@
       }
       .animate-shake {
         animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
+      }
+
+      @keyframes spin-slow {
+        from { transform: rotate(0deg); }
+        to { transform: rotate(360deg); }
+      }
+      .animate-spin-slow {
+        animation: spin-slow 3s linear infinite;
+      }
+      
+      @keyframes fade-in {
+        from { opacity: 0; transform: translateY(10px) scale(0.98); }
+        to { opacity: 1; transform: translateY(0) scale(1); }
+      }
+      .animate-fade-in {
+        animation: fade-in 0.5s ease-out forwards;
+      }
+
+      /* Floating Hearts */
+      @keyframes float {
+        0% { transform: translateY(0) rotate(0deg); opacity: 1; }
+        100% { transform: translateY(-110vh) rotate(-15deg); opacity: 0; }
+      }
+
+      /* Confetti */
+      .confetti-container {
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          pointer-events: none;
+          z-index: 100;
+          overflow: hidden;
+      }
+      .confetti {
+          position: absolute;
+          top: -20px;
+          width: 10px;
+          height: 10px;
+          opacity: 0;
+      }
+      @keyframes fall {
+          0% {
+              transform: translateY(0vh) rotateZ(0deg);
+              opacity: 1;
+          }
+          100% {
+              transform: translateY(110vh) rotateZ(720deg);
+              opacity: 0;
+          }
+      }
+
+      /* Gradient Text */
+      .text-gradient {
+        background: linear-gradient(45deg, #f43f5e, #f97316); /* rose-500 to orange-500 */
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent; 
+        -moz-text-fill-color: transparent;
       }
     </style>
   <script type="importmap">
